@@ -66,3 +66,4 @@
 [2025-04-22 19:27:52]	No se encontró una version válida	Es posible ya actualizar nombre items en vista Calc
 [2025-04-22 21:01:19]	No se encontró una version válida	Completamente editables Items desde vista Calc
 [2025-04-22 23:42:36]	No se encontró una version válida	Automatic update
+[2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
